--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
 .DS_Store
+
+/build/
+
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.run.xml
+*.synctex.gz
+*.toc
+*.lof
+*.lot
+*.nav
+*.snm
+
+*.w18
+*_latexmk
+svg-inkscape/
+*.svg-tex
+
+.vscode/
